--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
     compile 'com.naver.maps.open:naver-map-api:2.1.2@aar'
+    compile 'gun0912.ted:tedpermission:1.0.2'
 
 }
